--- a/index.html
+++ b/index.html
@@ -21,9 +21,277 @@
     <title>Trive</title>
 </head>
 <body>
-    <div class="Container">
-        <div>Hi, There</div>
-        <i class="fa-sharp fa-solid fa-house"></i>
+    <!-- Start Header -->
+    <header class="header">
+        <div class="Container">
+            <img class="Logo" src="./imgs/Logo.png" alt="">
+            <nav class="main-nav">
+                <!-- bars icon -->
+                <i class="bars fa-solid fa-bars"></i>
+                <ul class="menu-items">
+                    <li><a class="active" href="#Home">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Features">Features</a></li>
+                    <li><a href="#Blog">Blog</a></li>
+                    <li><a href="#Contact">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="sign-up btn-shap">Sign up</button>
+        </div>
+    </header>
+    <!-- End Header -->
+    <!-- Start  Hero Section  -->
+    <div class="hero">
+        <div class="Container">
+            <div class="hero-info">
+                <div class="title">
+                    <h1>Travel more, create more memories.</h1>
+                    <p>A Tram of devoted and experienced tourism professionssionals will provide you with the best advice and tips.</p>
+                </div>
+                <div class="tour-searching">
+                    <div class="box">
+                        <div class="tour-info">
+                            <p>Tour name</p>
+                            <p>Adventure</p>
+                        </div>
+                        <select name="" id="">
+                            <option value=""></option>
+                            <option value="">sss</option>
+                            <option value="">sss</option>
+                            <option value="">sss</option>
+                        </select>
+                    </div>
+                    <div class="box">
+                        <div class="tour-info">
+                            <p>Popular tour</p>
+                            <p>Everest</p>
+                        </div>
+                        <select name="" id="">
+                            <option value=""></option>
+                            <option value="">sss</option>
+                            <option value="">sss</option>
+                            <option value="">sss</option>
+                        </select>
+                    </div>
+                    <div class="box">
+                        <div class="tour-info">
+                            <p>Average Price</p>
+                            <p>$2000 - $4000</p>
+                        </div>
+                        <select name="" id="">
+                            <option value=""></option>
+                            <option value="">sss</option>
+                            <option value="">sss</option>
+                            <option value="">sss</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="search btn-shap">Search</button>
+                </div>
+            </div>
+            <div class="images">
+                <div class="grid">
+                    <img src="./imgs/toa-heftiba-0rlfiRSdVzU-unsplash.png" alt="">
+                    <img src="./imgs/tyler-nix-6mze64HRU2Q-unsplash.png" alt="">
+                </div>
+                <img class="last" src="./imgs/daniel-jensen-tQpypKA92k8-unsplash.png" alt="">
+            </div>
+        </div>
     </div>
+    <!-- End  Hero Section-->
+    <!-- Start Sponsor -->
+    <div class="Sponsor">
+        <div class="Container">
+            <img src="./imgs/Group 5564.png" alt="">
+            <img src="./imgs/Group 5565.png" alt="">
+            <img src="./imgs/Vector.png" alt="">
+            <img src="./imgs/Group 5567.png" alt="">
+        </div>
+    </div>
+    <!-- Ens Sponsor -->
+    <!-- Start Explore -->
+    <div class="Explore">
+        <div class="Container">
+            <div class="images">
+                <img src="./imgs/ian-dooley-TevqnfbI0Zc-unsplash.png" alt="">
+            </div>
+            <div class="info">
+                <h1>A new way to explore the world </h1>
+                <p>For decades travellers have reached for Lonely Planet books when looking to plan and execute their perfect 
+                trip, but now, they can also let Lonely Planet Experiences lead the way .</p>
+                <button class="button btn-shap" type="submit">Learn more</button>
+            </div>
+        </div>
+    </div>
+    <!-- End Explore -->
+    <!-- Start Popular destination -->
+    <div class="pop-dest">
+        <div class="Container">
+            <div class="head">
+                <h1>Popular destination</h1>
+                <a class="btn-shap" href="#View all">View all</a>
+            </div>
+            <div class="all-dest">
+                <div class="box">
+                    <img src="./imgs/cassie-gallegos-Lqno1bhxoiE-unsplash 1.png" alt="">
+                    <div class="dest-info">
+                        <p class="place">Bali, indenosia</p>
+                        <div class="feedback">
+                            <i class="star fa-solid fa-star"></i>
+                            <span class="fdb">4.9</span>
+                            <span class="fdb">superb</span>
+                            <span class="price">$360</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/jezael-melgoza-7H77FWkK_x4-unsplash 1.png" alt="">
+                    <div class="dest-info">
+                        <p class="place">Tokyo, Japan</p>
+                        <div class="feedback">
+                            <i class="star fa-solid fa-star"></i>
+                            <span class="fdb">5.3</span>
+                            <span class="fdb">Good</span>
+                            <span class="price">$429</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/fatih-yurur-kNSREmtaGOE-unsplash 1.png" alt="">
+                    <div class="dest-info">
+                        <p class="place">Dylan, Turkey</p>
+                        <div class="feedback">
+                            <i class="star fa-solid fa-star"></i>
+                            <span class="fdb">5.0</span>
+                            <span class="fdb">Superb</span>
+                            <span class="price">$490</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Start Popular destination -->
+    <!-- Start Testimonials -->
+    <div class="Testimonials">
+        <div class="Container">
+            <div class="info">
+                <p class="title">Testimonials</p>
+                <q class="quote">Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec</q>
+                <h3 class="name">Benjamin Noah</h3>
+                <p class="Founder">Founder Circle</p>
+            </div>
+            <div class="image">
+                <div class="fillter">
+                    <img class="person" src="./imgs/student_PNG 1.png" alt="">
+                    <div class="quote-logo">
+                        <img class="logo" src="./imgs/Vector (2).png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Testimonials -->
+    <!-- Start Trending Stories -->
+    <div class="Stories">
+        <div class="Container">
+            <div class="head">
+                <h1>Trending Stories</h1>
+                <a class="btn-shap" href="#View all">View all</a>
+            </div>
+            <div class="all-stories">
+                <div class="box">
+                    <img src="./imgs/joshua-earle-ICE__bo2Vws-unsplash 1.png" alt="">
+                    <div class="str-info">
+                        <p class="place">Matira Beach</p>
+                        <p class="comment">Every sunset bring the promise of a new dawn</p>
+                        <p class="date">February 12, 2023</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/georgy-trofimov-ddZGdh1d2s0-unsplash 1 (2).png" alt="">
+                    <div class="str-info">
+                        <p class="place">Matira Beach</p>
+                        <p class="comment">Muslim gathering place for prayer.</p>
+                        <p class="date">March 21, 2020</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/cristofer-jeschke-uQDRDqpYJHI-unsplash 1.png" alt="">
+                    <div class="str-info">
+                        <p class="place">Matira Beach</p>
+                        <p class="comment">A beach is landform alongside a body</p>
+                        <p class="date">April 02, 2020</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/alessio-bachetti-Kgv2UxpU3cM-unsplash 1.png" alt="">
+                    <div class="str-info">
+                        <p class="place">Matira Beach</p>
+                        <p class="comment">The best time to visit the Amalfi Coast</p>
+                        <p class="date">June 29, 2020</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Trending Stories -->
+    <!-- start Newsletter -->
+    <div class="newslatter">
+        <div class="Container">
+            <div class="title">
+                <p>Subscribe to Our Newsletter! To get Latest News of Us.</p>
+            </div>
+            <form>
+                <div class="space">
+                    <input placeholder="Enter Your Email" type="email" name="email" id="email">
+                    <button class="btn-shap" type="submit">Subscribe</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- End Newslatter -->
+    <!-- Start Footer -->
+    <div class="footer">
+        <div class="Container">
+            <div class="Contact">
+                <img src="./imgs/Logo.png" alt="">
+                <div class="socials">
+
+                </div>
+            </div>
+            <div class="guide">
+                <div class="information">
+                    <ul>
+                        <li><p>Information</p></li>
+                        <li><a href="#Guide">Product</a></li>
+                        <li><a href="#Guide">About Us</a></li>
+                        <li><a href="#Guide">Blog</a></li>
+                        <li><a href="#Guide">Enent</a></li>
+                    </ul>
+                </div>
+                <div class="links">
+                    <ul>
+                        <li><p>Helpful Links</p></li>
+                        <li><a href="#Guide">Destinations</a></li>
+                        <li><a href="#Guide">Supports</a></li>
+                        <li><a href="#Guide">Terms & Condition</a></li>
+                        <li><a href="#Guide">Privacy</a></li>
+                    </ul>
+                </div>
+                <div class="services">
+                    <ul>
+                        <li><p>Our Services</p></li>
+                        <li><a href="#Guide">Traveling</a></li>
+                        <li><a href="#Guide">Support 24/7</a></li>
+                        <li><a href="#Guide">Guide</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div>&copy; 2023 created by Araiche Khalil</div>
+        </footer>
+    </div>
+    <!-- End Footer -->
 </body>
 </html>
