--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@
             <div class="Contact">
                 <img src="./imgs/Logo.png" alt="">
                 <div class="socials">
-
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-instagram"></i>
                 </div>
             </div>
             <div class="guide">
